DFS trace now follows the visited nodes walk instead of the final path. When the walk steps out of the final path its colored BLUE. Fix RED edge coloring